k8s/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    app: rails-app
spec:
  type: NodePort
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: rails-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  labels:
    app: rails-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rails-app
  template:
    metadata:
      name: db
      labels:
        app: rails-app
        tier: database
    spec:
      volumes:
      - name: postgres-pv
        persistentVolumeClaim:
          claimName: postgres-pvc
      containers:
      - name: db
        image: postgres:9.6.2
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: "/var/lib/postgresql/data"
          name: postgres-pv
