k8s/rails.yaml
apiVersion: v1
kind: Service
metadata:
  name: rails-app
spec:
  selector:
    app: rails-app
  ports:
    - port: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rails-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rails-app
  template:
    metadata:
      labels:
        app: rails-app
    spec:
      containers:
      - args:
        - bash
        - -c
        - rails s -p 3000 -b 0.0.0.0
        name: rails-app-api
        image: rails-app:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
