k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rails-ingress
spec:
  rules:
    - host: rails.local
      http:
        paths:
          - backend:
              serviceName: rails-app
              servicePort: 3000
            path: /
